--- a/config/locales/es-PA.yml
+++ b/config/locales/es-PA.yml
@@ -824,6 +824,7 @@ es-PA:
   button_create_and_continue: Crear y continuar
   text_custom_field_possible_values_info: 'Un valor en cada línea'
   label_display: Mostrar
+  label_language: Idioma
   field_editable: Modificable
   setting_repository_log_display_limit: Número máximo de revisiones mostradas en el archivo de trazas
   setting_file_max_size_displayed: Tamaño máximo de los archivos de texto mostrados
