--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -822,6 +822,7 @@ es:
   button_create_and_continue: Crear y continuar
   text_custom_field_possible_values_info: 'Un valor en cada línea'
   label_display: Mostrar
+  label_language: Idioma
   field_editable: Modificable
   setting_repository_log_display_limit: Número máximo de revisiones mostradas en el fichero de trazas
   setting_file_max_size_displayed: Tamaño máximo de los ficheros de texto mostrados
